--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,8 @@ test docker image:
     - curl http://website:8000 | grep $APP_VERSION
 
 pages:
+  stage: production
+  image: docker:27.0.3
   services:
     - name: redis:7.4.0
       command:
