--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,8 @@ pages:
   stage: production
   image: docker:27.0.3
   services:
-    - docker:27.0.3-dind
+    - name: docker:27.0.3-dind
+      alias: docker
     - name: redis:7.4.0
       command:
         - redis-server --requirepass strong_password
