--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 variables:
   APP_VERSION: $CI_PIPELINE_IID
 
-build website:
+versioning website:
   image: alpine
   stage: build
   script:
@@ -24,7 +24,7 @@ build docker image:
     - docker:27.0.3-dind
   script:
     - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER $CI_REGISTRY --password-stdin
-    - docker build -t $CI_REGISTRY_IMAGE -t $CI_REGISTRY_IMAGE:$APP_VERSION .
+    - docker build -t $CI_REGISTRY_IMAGE -t $CI_REGISTRY_IMAGE:$APP_VERSION -t miladroid/infra-task -t miladroid/infra-task:$APP_VERSION .
     - docker image ls
     - docker push --all-tags $CI_REGISTRY_IMAGE
 
@@ -37,23 +37,3 @@ test docker image:
   script:
     - curl http://website:8000 | grep $APP_VERSION
 
-pages:
-  stage: production
-  image: docker:27.0.3
-  services:
-    - name: docker:27.0.3-dind
-      alias: docker
-      entrypoint: ["env", "-u", "DOCKER_HOST"]
-    - name: redis:7.4.0
-      command:
-        - redis-server --requirepass strong_password
-      alias: redis
-  variables:
-    DOCKER_HOST: tcp://docker:2375/
-  script:
-    - docker run --hostname=infra-task --name=infra-task -p 80:8000 -e REDIS_CLIENT=predis -e REDIS_HOST=redis -e REDIS_USERNAME=default -e REDIS_PASSWORD=strong_password -e REDIS_PORT=6379 -e CACHE_DRIVER=redis -d infra-task:latest
-  artifacts:
-    paths:
-      - public
-  rules:
-    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
