Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,12 +11,14 @@ versioning website:
   image: alpine
   stage: build
   script:
+    - cat resources/views/welcome.blade.php
     - "sed -i \"s/Infra Task/Infra Task Version: $APP_VERSION/g\" resources/views/welcome.blade.php"
+    - cat resources/views/welcome.blade.php
   artifacts:
     paths:
       - resources/
 
-build docker image:
+.build docker image:
   stage: package
   image: docker:27.0.3
   services:
@@ -29,7 +31,7 @@ build docker image:
     - echo $DOCKER_REGISTRY_PASSWORD | docker login -u $DOCKER_REGISTRY_USERNAME --password-stdin
     - docker push --all-tags $DOCKER_REGISTRY_IMAGE
 
-test docker image:
+.test docker image:
   image: curlimages/curl
   stage: test
   services:
