Add unit test to .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ unit test:
     - pecl install redis && docker-php-ext-enable redis
     - composer install
   script:
+    - php artisan key:generate
     - php artisan test
 
 build docker image:
