--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,8 @@ unit test:
     - pecl install redis && docker-php-ext-enable redis
     - composer install
   script:
+    - cp .env.example .env
+    - sed -i "s/APP_KEY=.*/APP_KEY=$APP_KEY/" .env
     - php artisan key:generate
     - php artisan test
 
