--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,3 +43,19 @@ test docker image:
   script:
     - curl http://website:8000 | grep "Infra Task"
 
+deploy to kubernetes:
+  stage: production
+  image: alpine
+  manual_confirmation: yes
+  variables:
+    APP_NAME: infra-task
+  before_script:
+    - apk add openssh-client
+    - mkdir -p ~/.ssh
+    - eval $(ssh-agent -s)
+    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+    - ssh-add <(echo "$SSH_PRIVATE_KEY")
+  script: 
+    - ssh $PRODUCTION_SERVER echo $DOCKER_REGISTRY_PASSWORD | docker login -u $DOCKER_REGISTRY_USERNAME --password-stdin
+    - ssh $PRODUCTION_SERVER microk8s kubectl set image deployment.apps $APP_NAME $APP_NAME=$DOCKER_REGISTRY_IMAGE:$APP_VERSION
+
