--- a/manifests/php-k8s-deployment.yaml
+++ b/manifests/php-k8s-deployment.yaml
@@ -22,24 +22,25 @@ spec:
       labels:
         app: infra-task
     spec:
-#      affinity:
-#        podAntiAffinity:
-#          preferredDuringSchedulingIgnoredDuringExecution:
-#            - podAffinityTerm:
-#                labelSelector:
-#                  matchExpressions:
-#                    - key: app
-#                      operator: In
-#                      values:
-#                        - infra-task
-#                topologyKey: kubernetes.io/hostname
-#              weight: 100
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - podAffinityTerm:
+                labelSelector:
+                  matchExpressions:
+                    - key: app
+                      operator: In
+                      values:
+                        - infra-task
+                topologyKey: kubernetes.io/hostname
+              weight: 100
+      automountServiceAccountToken: false
       containers:
         - name: app
           envFrom:
             - configMapRef:
                 name: infra-task-config
-          image: miladroid/infra-task:latest
+          image: miladroid/infra-task:32
           imagePullPolicy: Always
           lifecycle:
             postStart:
@@ -48,7 +49,14 @@ spec:
           ports:
             - containerPort: 8000
               protocol: TCP
-#          livenessProbe:
+          livenessProbe:
+            tcpSocket:
+              port: 8000
+            initialDelaySeconds: 5
+            successThreshold: 1
+            failureThreshold: 3
+            timeoutSeconds: 1
+            periodSeconds: 10
           readinessProbe:
             httpGet:
               port: 8000
@@ -62,6 +70,8 @@ spec:
             limits:
               cpu: 200m
               memory: 400M
+              ephemeral-storage: "2Gi"
             requests:
               cpu: 100m
               memory: 200M
+              ephemeral-storage: "1Gi"
