--- a/manifests/php-k8s-ingress.yaml
+++ b/manifests/php-k8s-ingress.yaml
@@ -18,4 +18,5 @@ spec:
           backend:
             service:
               name: infra-task
-              port: 8000
+              port:
+                number: 8000
