--- a/manifests/redis-service.yaml
+++ b/manifests/redis-service.yaml
@@ -3,14 +3,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: infra-task
-  name: infra-task
+    app: redis
+  name: redis
 spec:
   ports:
     - name: http
-      port: 8000
-      targetPort: 8000
+      port: 6379
+      targetPort: 6379
       protocol: TCP
   selector:
-    app: infra-task
+    app: redis
   type: ClusterIP
