--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 stages:
   - unit test
-  - build
   - package
   - test
   - production
@@ -26,18 +25,10 @@ build docker image:
   image: docker:27.0.3
   services:
     - docker:27.0.3-dind
-  before_script:
-    - cp .env.example .env
-    - sed -i "s/APP_KEY=.*/APP_KEY=$APP_KEY/" .env
-    - sed -i "s/CACHE_DRIVER=.*/CACHE_DRIVER=$CACHE_DRIVER/" .env
-    - sed -i "s/REDIS_CLIENT=.*/REDIS_CLIENT=$REDIS_CLIENT/" .env
-    - sed -i "s/REDIS_HOST=.*/REDIS_HOST=$REDIS_HOST/" .env
-    - sed -i "s/REDIS_PASSWORD=.*/REDIS_PASSWORD=$REDIS_PASSWORD/" .env
-    - sed -i "s/REDIS_PORT=.*/REDIS_PORT=$REDIS_PORT/" .env
   script:
     - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER $CI_REGISTRY --password-stdin
     - docker build -t $CI_REGISTRY_IMAGE -t $CI_REGISTRY_IMAGE:$APP_VERSION -t $DOCKER_REGISTRY_IMAGE -t $DOCKER_REGISTRY_IMAGE:$APP_VERSION .
-    - docker image ls
+    - 'if [ ! -z $CI_COMMIT_TAG ]; then docker tag $CI_REGISTRY_IMAGE:latest $CI_REGISTRY_IMAGE:prod; fi'
     - docker push --all-tags $CI_REGISTRY_IMAGE
     - echo $DOCKER_REGISTRY_PASSWORD | docker login -u $DOCKER_REGISTRY_USERNAME --password-stdin
     - docker push --all-tags $DOCKER_REGISTRY_IMAGE
@@ -55,7 +46,9 @@ test docker image:
 deploy to kubernetes:
   stage: production
   image: alpine
-  # when: manual
+  when: manual
+  rules:
+    - if: '$CI_COMMIT_TAG'
   variables:
     APP_NAME: infra-task
   before_script:
@@ -68,5 +61,4 @@ deploy to kubernetes:
   script:
     - ssh $PRODUCTION_SERVER "echo $DOCKER_REGISTRY_PASSWORD | docker login -u $DOCKER_REGISTRY_USERNAME --password-stdin"
     - ssh $PRODUCTION_SERVER microk8s kubectl set image deployment.apps $APP_NAME *=$DOCKER_REGISTRY_IMAGE:$APP_VERSION
-    - ssh $PRODUCTION_SERVER microk8s kubectl get all -A
 
